fix gap between sections

--- a/src/styles/abstract/_mixins.scss
+++ b/src/styles/abstract/_mixins.scss
@@ -14,10 +14,10 @@
   }
 }
 
-@mixin gridRows($gap) {
+@mixin gridRows {
   display: grid;
   grid-template-rows: auto;
-  row-gap: $gap;
+  row-gap: 48px;
 }
 
 @mixin onLaptop {
