--- a/src/styles/layout/_contacts.scss
+++ b/src/styles/layout/_contacts.scss
@@ -10,7 +10,7 @@
     @include gridColumns;
 
     @include onMobile {
-      @include gridRows(48px);
+      @include gridRows;
 
     }
   }
