--- a/src/styles/layout/_details.scss
+++ b/src/styles/layout/_details.scss
@@ -5,7 +5,7 @@
   }
 
   &__container {
-    @include gridRows(48px);
+    @include gridRows;
   }
 
   &__image {
