--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,21 +1,27 @@
 @import "../abstract/variables";
 
 .main {
-  --gap-row: 160px;
+  --gap: 160px;
+  display: grid;
+  padding: 120px;
 
   color: #fff;
   background-color: $primary-color;
-  padding: 120px;
 
-  @include gridRows(var(--gap-row));
+  &__about,
+  &__compare,
+  &__details,
+  &__contacts {
+    margin-bottom: var(--gap);
+  }
 
   @include onLaptop {
     padding: 120px 72px;
-    --gap-row: 120px;
+    --gap: 120px;
   }
 
   @include onMobile {
     padding: 60px 20px;
-    --gap-row: 90px;
+    --gap: 90px;
   }
 }
